syntax = "proto3";

package spine.test.delivery;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.delivery";
option java_outer_classname = "DeliveryConsecutuveNumberProto";
option java_multiple_files = true;

message ConsecutiveNumber {

    option (entity).kind = PROCESS_MANAGER;

    string id = 1;

    int32 iteration = 2;
}

message ConsecutiveNumberView {

    option (entity).kind = PROJECTION;

    string id = 1;

    int32 last_value = 2;
}
