syntax = "proto3";

package spine.test.delivery;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.delivery";
option java_outer_classname = "DeliveryTestEventsProto";
option java_multiple_files = true;

import "spine/core/user_id.proto";

message NumberAdded {
    option (is).java_type = "io.spine.server.delivery.given.CalculatorSignal";

    string calculator_id = 1;

    int32 value = 2;
}

message NumberImported {
    option (is).java_type = "io.spine.server.delivery.given.CalculatorSignal";

    string calculator_id = 1;

    int32 value = 2;
}

message NumberReacted {
    option (is).java_type = "io.spine.server.delivery.given.CalculatorSignal";

    string calculator_id = 1;

    int32 value = 2;
}

message DTaskCreated {

    string id = 1;
}

message DTaskAssigned {

    string id = 1;

    spine.core.UserId assignee = 2;
}

message PositiveNumberEmitted {

    string id = 1;

    int32 value = 2 [(min).value = "1"];
}

message NegativeNumberEmitted {

    string id = 1;

    int32 value = 2 [(max).value = "-1"];
}
